[package]
name = "jiu"
version = "0.1.1"
authors = ["Xetera"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
chrono = { version= "0.4", features = ["serde"]}
async-trait = "0.1.50"
tokio = { version = "1.8.1",   features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
url = "2.2.2"
better-panic = "0.2.0"
async-recursion = "0.3.2"
futures = "0.3.15"
thiserror = "1.0.26"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "time", "offline"] }
dotenv = "0.15.0"
