[package]
name = "jiu"
version = "0.1.1"
authors = ["Xetera"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "multipart"] }
chrono = { version= "0.4.19", features = ["serde"]}
async-trait = "0.1.50"
async-recursion = "0.3.2"
tokio = { version = "1.8.1",   features = ["full"] }
tokio-test = "0.4.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
url = "2.2.2"
better-panic = "0.2.0"
futures = "0.3.15"
thiserror = "1.0.26"
num-traits = "0.2.14"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline", "json", "bigdecimal"] }
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.42"
strum = { version = "0.21.0", features = ["derive"] }
strum_macros = "0.21.1"
rsa = "0.4.0"
sha-1 = "0.9.7"
digest = "0.9.0"
base64 = "0.13.0"
rand = "0.8.4"
regex = "1.5.4"
lazy_static = "1.4.0"
dyn-clone = "1.0.4"
bimap = "0.6.1"
governor = "0.3.2"
nonzero_ext = "0.2.0"
actix = "0.10.0"
actix-web = "4.0.0-beta.8"
#actix-files = "0.6.0-beta.6"
#actix-cors ="0.6.0-beta.2"
itertools = "0.10.1"
parking_lot = "0.11.1"
tokio-amqp = "1.0.0"
lapin = "1.8.1"
